--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
-          </div>
+          </div><!-- End Gallery Item -->
 
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
@@ -148,7 +148,7 @@
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
-          </div>
+          </div><!-- End Gallery Item -->
 
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
@@ -158,7 +158,7 @@
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
-          </div>
+          </div><!-- End Gallery Item -->
 
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
@@ -168,7 +168,7 @@
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
-          </div>
+          </div><!-- End Gallery Item -->
 
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
@@ -178,7 +178,7 @@
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
-          </div>
+          </div><!-- End Gallery Item -->
 
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
@@ -188,7 +188,7 @@
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
-          </div>
+          </div><!-- End Gallery Item -->
 
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
@@ -198,7 +198,7 @@
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
-          </div>
+          </div><!-- End Gallery Item -->
 
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
@@ -208,7 +208,7 @@
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
-          </div>
+          </div><!-- End Gallery Item -->
 
 
         </div>
