--- a/index.html
+++ b/index.html
@@ -120,7 +120,19 @@
 <!--            </div>-->
 <!--          </div>&lt;!&ndash; End Gallery Item &ndash;&gt;-->
 
+
           <div class="col-xl-3 col-lg-4 col-md-6">
+            <div class="gallery-item h-100">
+              <img src="assets/img/gallery/gallery-11.jpg" class="img-fluid" alt="">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <a href="assets/img/gallery/gallery-11-ss.jpg" title="Gallery 1" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div>
+          </div><!-- End Gallery Item -->
+
+
+          <div class="col-xl-3 col-lg-4 col-md-6 ">
             <div class="gallery-item h-100">
               <img src="assets/img/gallery/gallery-2.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
@@ -209,6 +221,8 @@
               </div>
             </div>
           </div><!-- End Gallery Item -->
+
+
 
 
         </div>
