--- a/gallery-athena.html
+++ b/gallery-athena.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>PhotoFolio Bootstrap Template - Gallery</title>
+  <title>Athena - Gallery</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -94,17 +94,17 @@
       <div class="container position-relative">
         <div class="row d-flex justify-content-center">
           <div class="col-lg-6 text-center">
-            <h2>Nature (16 images)</h2>
-            <p>Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat ipsum dolorem.</p>
+            <h2>Athena</h2>
+            <p>Elusive as the Goddess Athena.</p>
 
-            <a class="cta-btn" href="contact.html">Available for hire</a>
+<!--            <a class="cta-btn" href="contact.html">Available for hire</a>-->
 
           </div>
         </div>
       </div>
     </div><!-- End Page Header -->
 
-    <!-- ======= Gallery Section ======= -->
+    <!-- ======= Gallery AthenaSection ======= -->
     <section id="gallery" class="gallery">
       <div class="container-fluid">
 
@@ -113,93 +113,120 @@
 <!--            <div class="gallery-item h-100">-->
 <!--              <img src="assets/img/gallery/gallery-1.jpg" class="img-fluid" alt="">-->
 <!--              <div class="gallery-links d-flex align-items-center justify-content-center">-->
-<!--                <a href="assets/img/gallery/gallery-1.jpg" title="Gallery 1" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>-->
+<!--                <a href="assets/img/gallery/gallery-1.jpg" title="Gallery Athena1" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>-->
 <!--                <a href="gallery-athena.html" class="details-link"><i class="bi bi-link-45deg"></i></a>-->
 <!--              </div>-->
 <!--            </div>-->
-<!--          </div>&lt;!&ndash; End Gallery Item &ndash;&gt;-->
+<!--          </div>&lt;!&ndash; End Gallery AthenaItem &ndash;&gt;-->
 
 <!--          <div class="col-xl-3 col-lg-4 col-md-6">-->
 <!--            <div class="gallery-item h-100">-->
 <!--              <img src="assets/img/gallery/gallery-3.jpg" class="img-fluid" alt="">-->
 <!--              <div class="gallery-links d-flex align-items-center justify-content-center">-->
-<!--                <a href="assets/img/gallery/gallery-3.jpg" title="Gallery 3" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>-->
+<!--                <a href="assets/img/gallery/gallery-3.jpg" title="Gallery Athena3" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>-->
 <!--                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>-->
 <!--              </div>-->
 <!--            </div>-->
-<!--          </div>&lt;!&ndash; End Gallery Item &ndash;&gt;-->
+<!--          </div>&lt;!&ndash; End Gallery AthenaItem &ndash;&gt;-->
           <div class=" col-lg-4 col-md-6">
             <div class="gallery-item h-100">
               <img src="assets/img/gallery/gallery-4.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/gallery/gallery-4.jpg" title="Gallery 4" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets/img/gallery/gallery-4.jpg" title="Gallery Athena" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="gallery-athena.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
-          </div><!-- End Gallery Item -->
+          </div><!-- End Gallery AthenaItem -->
           <div class="col-lg-4 col-md-6">
             <div class="gallery-item h-100">
               <img src="assets/img/gallery/gallery-5.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/gallery/gallery-5.jpg" title="Gallery 5" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets/img/gallery/gallery-5.jpg" title="Gallery Athena" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
-          </div><!-- End Gallery Item -->
+          </div><!-- End Gallery AthenaItem -->
           <div class="col-lg-4 col-md-6">
             <div class="gallery-item h-100">
               <img src="assets/img/gallery/gallery-6.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/gallery/gallery-6.jpg" title="Gallery 6" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets/img/gallery/gallery-6.jpg" title="Gallery Athena" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
-          </div><!-- End Gallery Item -->
+          </div><!-- End Gallery AthenaItem -->
+          <div class="col-lg-4 col-md-6">
+            <div class="gallery-item h-100">
+              <img src="assets/img/gallery/gallery-12.jpg" class="img-fluid" alt="">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <a href="assets/img/gallery/gallery-12-ss.jpg" title="Gallery Athena" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div>
+          </div><!-- End Gallery AthenaItem -->
+          <div class="col-lg-4 col-md-6">
+            <div class="gallery-item h-100">
+              <img src="assets/img/gallery/gallery-13.jpg" class="img-fluid" alt="">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <a href="assets/img/gallery/gallery-13-ss.jpg" title="Gallery Athena" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div>
+          </div><!-- End Gallery AthenaItem -->
+          <div class="col-lg-4 col-md-6">
+            <div class="gallery-item h-100">
+              <img src="assets/img/gallery/gallery-14.jpg" class="img-fluid" alt="">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <a href="assets/img/gallery/gallery-14-ss.jpg" title="Gallery Athena" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div>
+          </div><!-- End Gallery AthenaItem -->
 <!--          <div class="col-xl-3 col-lg-4 col-md-6">-->
 <!--            <div class="gallery-item h-100">-->
 <!--              <img src="assets/img/gallery/gallery-7.jpg" class="img-fluid" alt="">-->
 <!--              <div class="gallery-links d-flex align-items-center justify-content-center">-->
-<!--                <a href="assets/img/gallery/gallery-7.jpg" title="Gallery 7" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>-->
+<!--                <a href="assets/img/gallery/gallery-7.jpg" title="Gallery Athena7" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>-->
 <!--                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>-->
 <!--              </div>-->
 <!--            </div>-->
-<!--          </div>&lt;!&ndash; End Gallery Item &ndash;&gt;-->
+<!--          </div>&lt;!&ndash; End Gallery AthenaItem &ndash;&gt;-->
 <!--          <div class="col-xl-3 col-lg-4 col-md-6">-->
 <!--            <div class="gallery-item h-100">-->
 <!--              <img src="assets/img/gallery/gallery-8.jpg" class="img-fluid" alt="">-->
 <!--              <div class="gallery-links d-flex align-items-center justify-content-center">-->
-<!--                <a href="assets/img/gallery/gallery-8.jpg" title="Gallery 8" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>-->
+<!--                <a href="assets/img/gallery/gallery-8.jpg" title="Gallery Athena8" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>-->
 <!--                <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>-->
 <!--              </div>-->
 <!--            </div>-->
-<!--          </div>&lt;!&ndash; End Gallery Item &ndash;&gt;-->
+<!--          </div>&lt;!&ndash; End Gallery AthenaItem &ndash;&gt;-->
           <div class="col-lg-4 col-md-6">
             <div class="gallery-item h-100">
               <img src="assets/img/gallery/gallery-9.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/gallery/gallery-9.jpg" title="Gallery 9" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets/img/gallery/gallery-9.jpg" title="Gallery Athena" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
-          </div><!-- End Gallery Item -->
+          </div><!-- End Gallery AthenaItem -->
           <div class="col-lg-4 col-md-6">
             <div class="gallery-item h-100">
               <img src="assets/img/gallery/gallery-10.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/gallery/gallery-10.jpg" title="Gallery 10" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets/img/gallery/gallery-10.jpg" title="Gallery Athena" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="gallery-single.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
-          </div><!-- End Gallery Item -->
+          </div><!-- End Gallery AthenaItem -->
           <div class="col-lg-4 col-md-6">
             <div class="gallery-item h-100">
               <img src="assets/img/gallery/gallery-2.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <a href="assets/img/gallery/gallery-2.jpg" title="Gallery 2" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
+                <a href="assets/img/gallery/gallery-2.jpg" title="Gallery Athena" class="glightbox preview-link"><i class="bi bi-arrows-angle-expand"></i></a>
                 <a href="gallery-athena.html" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div>
-          </div><!-- End Gallery Item -->
+          </div><!-- End Gallery AthenaItem -->
 
 
 
@@ -209,7 +236,7 @@
         </div>
 
       </div>
-    </section><!-- End Gallery Section -->
+    </section><!-- End Gallery AthenaSection -->
 
   </main><!-- End #main -->
 
